arrumando bug peão